# alpha-vault-sdk

./: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml
idls/: alpha_vault.json
programs/alpha-vault/: Cargo.toml
programs/alpha-vault/src/: activation.rs  constants.rs  errors.rs  events.rs  lib.rs  pda.rs  seeds.rs
programs/alpha-vault/src/instructions/: claim_token.rs  close_escrow.rs  create_merkle_root_config.rs  deposit.rs  mod.rs  withdraw.rs  withdraw_remaining_quote.rs
programs/alpha-vault/src/instructions/create_escrow/: create_new_escrow.rs  create_permissioned_escrow.rs  create_permissioned_escrow_with_authority.rs  mod.rs
programs/alpha-vault/src/instructions/fill_amm/: fill_dlmm.rs  fill_dynamic_amm.rs  mod.rs
programs/alpha-vault/src/instructions/handle_crank_fee_whitelist/: close_crank_fee_whitelist.rs  create_crank_fee_whitelist.rs  mod.rs
programs/alpha-vault/src/instructions/handle_fcfs_vault/: close_fcfs_config.rs  create_fcfs_config.rs  initialize_fcfs_vault.rs  initialize_vault_with_fcfs_config.rs  mod.rs  update_fcfs_vault_parameters.rs
programs/alpha-vault/src/instructions/handle_prorata_vault/: close_prorata_config.rs  create_prorata_config.rs  initialize_prorata_vault.rs  initialize_vault_with_prorata_config.rs  mod.rs  update_prorata_vault_parameters.rs
programs/alpha-vault/src/state/: crank_fee_whitelist.rs  escrow.rs  mod.rs  root_config.rs  vault.rs  vault_config.rs
ts-client/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json
(+62 files in other folders)
