[package]
name = "alpha-vault"
version = "0.3.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "alpha_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["event-cpi"] }
anchor-spl = "0.28.0"
solana-program = "1.16.25"
static_assertions = "1.1.0"
num_enum = "0.7.1"
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
