[package]
name = "alpha-vault"
version = "0.4.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "alpha_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
localnet = []

[dependencies]
anchor-lang = { workspace = true }
bytemuck = { workspace = true, features = ["min_const_generics", "derive"] }
